--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@supabase/supabase-js": "^1.29.1",
     "@tailwindcss/forms": "^0.4.0"
   }
 }
