--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^1.29.1",
-    "@tailwindcss/forms": "^0.4.0"
+    "@tailwindcss/forms": "^0.4.0",
+    "cookie": "^0.4.1"
   }
 }
