--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.29.1",
     "@tailwindcss/forms": "^0.4.0",
-    "cookie": "^0.4.1"
+    "cookie": "^0.4.1",
+    "dayjs": "^1.10.7"
   }
 }
